--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ckfrontend",
+  "name": "angular-clientkeeper",
   "author": "Shoan Chikato",
   "version": "0.0.0",
   "license": "MIT",
